feat: support Tenant Admin scope and add accuracy report